--- a/public/index.html
+++ b/public/index.html
@@ -5,22 +5,29 @@
     <script src="/script.js"></script>
 </head>
 <body>
+    <div class="background">
     <div class="container">
-        <h1>Simple Interest Calculator</h1>
-        <div class="input-container">
-            <label for="principal">Principal Amount:</label>
-            <input type="number" id="principal" placeholder="Enter principal amount">
-        </div>
-        <div class="input-container">
-            <label for="rate">Interest Rate:</label>
-            <input type="number" id="rate" placeholder="Enter interest rate">
-        </div>
-        <div class="input-container">
-            <label for="time">Time Period (in years):</label>
-            <input type="number" id="time" placeholder="Enter time period">
-        </div>
-        <button onclick="calculateInterest()">Calculate Interest</button>
-        <div id="result"></div>
+    <form  id="interestForm">
+        <h1 class="heading">Simple Interest Calculator</h1>
+        <label class="label-Text" for="principal">Principal Amount:</label>
+        <input class="input-value" type="number" id="principal" required><br>
+        <div id="principalError" class="error-message"></div><br>
+
+        <label class="label-Text" for="rate">Interest Rate (%):</label>
+        <input class="input-value" type="number" id="rate" required><br>
+        <div id="rateError" class="error-message"></div><br>
+
+        <label class="label-Text" for="time">Time Period (years):</label>
+        <input class="input-value" type="number" id="time" required><br>
+        <div id="timeError" class="error-message"></div><br>
+
+        <button type="submit">Calculate</button>
+    </form>
+    
+        <p id="result" class="result-message"></p>
+        <p id="totalResult" class="result-message"></p>
+    
     </div>
+</div>
 </body>
 </html>
